# wayland-copy

./: App.hpp  CMakeLists.txt  README.md  main.cpp  options.cpp  options.hpp  utils.hpp  wldatadevice.hpp  wldatadevicemanager.hpp  wldatasource.hpp  wldisplay.hpp  wlregistry.hpp  wlseat.hpp
